fixing url issues

--- a/src/components/navigation/Navbar.astro
+++ b/src/components/navigation/Navbar.astro
@@ -6,7 +6,7 @@ import NavSidebar from "./NavSidebar";
     <div class="flex-1 px-2 mx-2">
         <a
             class="no-underline text-black font-bold text-xl px-2 py-2 rounded-lg hover:bg-[#1F293733]"
-            href="/">Istrail Lab</a
+            href={import.meta.env.BASE_URL}>Istrail Lab</a
         >
     </div>
     <NavSidebar client:only="react" />
