--- a/src/pages/romania-celebrates-sorin.astro
+++ b/src/pages/romania-celebrates-sorin.astro
@@ -72,7 +72,7 @@ const interviews = [
         <h1 class="font-bold text-3xl pt-8 pb-4">Romania Celebrates Sorin</h1>
         
         <p class="text-lg mb-8">
-            Professor Sorin Istrail's contributions to science and education have been celebrated across Romania. This page documents some of these special recognitions and events.
+            Professor Sorin Istrail's contributions to science and education have been celebrated across Romania. This page documents some of these special recognitions.
         </p>
 
         <div class="space-y-12">
