--- a/src/pages/romania-celebrates-sorin.astro
+++ b/src/pages/romania-celebrates-sorin.astro
@@ -37,7 +37,7 @@ const romaniaEvents = [
 const interviews = [
     {
         id: "de-la-om-la-om",
-        title: "De la om la om - Great Interview with Prof. Dr. Emanuel Balan",
+        title: "De la om la om - Interview with Prof. Dr. Emanuel Balan",
         description: "On March 14, 2024, Professor Istrail was featured in an engaging episode of the podcast 'De la om la om,' hosted by Prof. Dr. Emanuel Balan.",
         videoId: "4KNRjUY5JgM"
     },
