--- a/src/pages/essays.astro
+++ b/src/pages/essays.astro
@@ -4,6 +4,14 @@ import type { Publication } from "@/components/publicationList/publications";
 import Layout from "@/layouts/Layout.astro";
 
 const essays: Publication[] = [
+{
+    authors: ["Sorin Istrail"],
+    title: "Alan Turing, John von Neumann and Solomon Marcus: Their Centenials and their Axioms",
+    year: 2025,
+    journal:
+    pdf: "/papers/Turing and von Neumann's Brains and their Computers.pdf",
+    tags: [],
+  },
   {
     authors: [],
     title: "Brown University: 250th Anniversary Symposium: The Next 250 Years",
