Adding 2011 Marcus lectures

--- a/src/pages/lectures/solomon-marcus.astro
+++ b/src/pages/lectures/solomon-marcus.astro
@@ -107,5 +107,45 @@ import YouTubeEmbed from "../../components/video/YouTubeEmbed.astro";
                 title="Lecture 8: Two Neighbors Ignoring Each Other: Infinite Words and Formal Languages"
             />
         </div>
+
+        <div>
+            <h3 class="font-semibold text-xl py-2">
+                Lecture 9: The Euclidean and Non-Euclidean Paradigm: A Transdisciplinary Itinerary
+            </h3>
+            <YouTubeEmbed
+                videoId="Fz1Yx-z17DQ"
+                title="Lecture 9: The Euclidean and Non-Euclidean Paradigm: A Transdisciplinary Itinerary"
+            />
+        </div>
+
+        <div>
+            <h3 class="font-semibold text-xl py-2">
+                Lecture 10: Correctness and Meaning: Cooperation or Conflict?
+            </h3>
+            <YouTubeEmbed
+                videoId="HUew9SF7kAQ"
+                title="Lecture 10: Correctness and Meaning: Cooperation or Conflict?"
+            />
+        </div>
+
+        <div>
+            <h3 class="font-semibold text-xl py-2">
+                Lecture 11: Mathematics: Between Semiosis and Cognition
+            </h3>
+            <YouTubeEmbed
+                videoId="u4NPhyAOKKM"
+                title="Lecture 11: Mathematics: Between Semiosis and Cognition"
+            />
+        </div>
+
+        <div>
+            <h3 class="font-semibold text-xl py-2">
+                Lecture 12: Symmetry: A Universal Paradigm
+            </h3>
+            <YouTubeEmbed
+                videoId="oKcGC9683dg"
+                title="Lecture 12: Symmetry: A Universal Paradigm"
+            />
+        </div>
     </div>
 </Layout>
