fixing small typo

--- a/src/pages/essays.astro
+++ b/src/pages/essays.astro
@@ -8,7 +8,7 @@ const essays: Publication[] = [
     authors: ["Sorin Istrail"],
     title: "Alan Turing, John von Neumann and Solomon Marcus: Their Centenials and their Axioms",
     year: 2025,
-    journal: "Academica"
+    journal: "Academica",
     pdf: "/papers/Turing and von Neumann's Brains and their Computers.pdf",
     tags: [],
   },
